<resources>
    <string name="app_name">TestApp</string>
    <string name="image_movement">Move an image</string>
    <string name="boo">Boo!</string>
    <string name="cards">CardView</string>
    <string name="first_card">First card</string>
    <string name="bankka_text">Image says it all</string>
    <string name="tab_layout">Tabs to slide between</string>
    <string name="fragment_one_title">First fragment</string>
    <string name="fragment_bankka_title">Bankka</string>
    <string name="fragment_bee_title">Bee</string>
    <string name="fragment_one_text">This drawing was made by this one cool Discord user.</string>
    <string name="fragment_bee_text">According to all known laws of aviation, a bee should not be able to fly.</string>
    <string name="view_pager">ViewPager screen</string>
    <string name="city_search">City search</string>
    <string name="placeholder">placeholder</string>
    <string name="h">h</string>
    <string name="min">min</string>
    <string name="s">s</string>
    <string name="timer_start">Start</string>
    <string name="stop_timer">Stop</string>
    <string name="timer">Timer</string>
    <string name="new_receipt">New receipt</string>
    <string name="name_search">Search receipts by name</string>
    <string name="receipts">Receipt saver</string>
    <string name="save">Save</string>
    <string name="date_search_button">Pick date</string>
    <string name="name_search_button">Search name</string>
    <string name="generator_button">Generate a bunch of strings</string>
    <string name="new_url">Copy your image URL here.</string>
    <string name="delete">Delete URL</string>
    <string name="gallery_button">URL image gallery</string>
    <string name="check_url">Check URL</string>
    <string name="name_url">Give your photo a title</string>
    <string name="url_not_valid">Your URL isn\'t valid</string>
    <string name="url_title_missing">Please give your image a name first.</string>
    <string name="blackjack">Blackjack</string>
    <string name="in_bank">Money in the \"bank\":</string>
    <string name="bet_to_be_placed">Your bet:</string>
    <string name="plus_ten">+10€</string>
    <string name="plus_hundred">+100€</string>
    <string name="plus_two_hundred">+200€</string>
    <string name="plus_half_a_thou">+500€</string>
    <string name="play">Play</string>
    <string name="dealer_hand">The dealer\'s hand:</string>
    <string name="player_hand">Your hand:</string>
    <string name="example_bet">150€</string>
    <string name="card_value_king">King</string>
    <string name="blackjack_button">Blackjack</string>
    <string name="french_suit_clubs">Clubs</string>
    <string name="card_deck_shuffle">Shuffling cards...</string>
    <string name="insurance">Insurance</string>
    <string name="split">Split</string>
    <string name="double_button_text">Double</string>
    <string name="hit">Hit</string>
    <string name="stand">Stand</string>
    <string name="sulkeiset_button">Sulkeiset</string>
    <string name="blackjack_push">Push</string>
    <string name="blackjack_player_win">Player wins!</string>
    <string name="blackjack_dealer_win">Dealer won!</string>
    <string name="receipt_name">Receipt name</string>
    <string name="receipt_saver_button">Receipt saver</string>
    <string name="receipt_name_missing_message">Do you want to give it a name and save it or do you want to go back to the list of other receipts without saving this one?</string>
    <string name="receipt_name_missing_title">No name given for this receipt</string>
    <string name="receipt_name_missing_positive">I want to name it</string>
    <string name="receipt_name_missing_negative">Go to list</string>

    <string-array name="image_formats">
        <item>all</item>
        <item>jpg</item>
        <item>png</item>
        <item>gif</item>
    </string-array>

    <string-array name="french_suits">
        <item>Clubs</item>
        <item>Diamonds</item>
        <item>Hearts</item>
        <item>Spades</item>
    </string-array>

    <string-array name="cards">
        <item>Ace</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>Jack</item>
        <item>Queen</item>
        <item>King</item>
    </string-array>
</resources>