<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blackjack"
        android:textSize="48sp"
        android:layout_marginVertical="16dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_bank"
        android:layout_marginTop="8dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="1000€"
        android:textSize="32dp"
        android:id="@+id/activity_blackjack_bank_amount"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bet_to_be_placed"
        android:layout_marginTop="32dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="100€"
        android:textSize="32dp"
        android:id="@+id/activity_blackjack_bet_amount"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus_ten"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="32dp"
        android:id="@+id/activity_blackjack_plus_ten"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus_hundred"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:id="@+id/activity_blackjack_plus_hundred"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus_two_hundred"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:id="@+id/activity_blackjack_plus_two_hundred"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus_half_a_thou"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="32dp"
        android:id="@+id/activity_blackjack_plus_half_a_thou"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="64dp"
        android:id="@+id/activity_blackjack_play"
        />

</LinearLayout>