<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/new_receipt"
        android:id="@+id/activity_receipt_new_receipt_button"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:hint="@string/name_search"
        android:id="@+id/activity_receipt_name_search"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_search_button"
            android:layout_weight="1"
            android:layout_marginRight="8dp"
            android:id="@+id/activity_receipt_name_search_button"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_search_button"
            android:layout_weight="1"
            android:layout_marginLeft="8dp"
            android:id="@+id/activity_receipt_date_search"
            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_receipt_recycler_view"
        />
</LinearLayout>