<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    >

    <TextView
        android:id="@+id/activity_timer_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32dp"
        android:textSize="64sp"
        tools:text="00"
        android:gravity="center_vertical"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/activity_timer_hours"
        android:layout_toRightOf="@id/activity_timer_hours"
        android:text="@string/h"
        android:textSize="32sp"
        />

    <TextView
        android:id="@+id/activity_timer_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_timer_hours"
        android:layout_marginVertical="32dp"
        android:textSize="64sp"
        tools:text="00"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/activity_timer_minutes"
        android:layout_toRightOf="@id/activity_timer_minutes"
        android:text="@string/min"
        android:textSize="32sp"
        />

    <TextView
        android:id="@+id/activity_timer_seconds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_timer_minutes"
        android:layout_marginVertical="32dp"
        android:textSize="64sp"
        tools:text="00"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/activity_timer_seconds"
        android:layout_toRightOf="@id/activity_timer_seconds"
        android:text="@string/s"
        android:textSize="32sp"
        />

    <Button
        android:id="@+id/activity_timer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/activity_timer_seconds"
        android:layout_marginVertical="32dp"
        tools:text="@string/timer_start"
        />

</RelativeLayout>