<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dealer_hand"
        android:textSize="24sp"
        android:layout_marginTop="16dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="8dp"
        android:background="@color/light_gray">

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:scrollbars="horizontal"
            android:layout_weight="3"
            android:id="@+id/activity_blackjack_game_dealer_recycler"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            tools:text="16"
            android:textSize="32sp"
            android:layout_weight="1"
            android:gravity="center"
            android:id="@+id/activity_blackjack_game_dealer_score"
            />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_hand"
        android:textSize="24sp"
        android:layout_marginTop="32dp"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="horizontal"
        android:layout_margin="8dp"
        android:background="@color/light_gray"
        android:id="@+id/activity_blackjack_game_player_recycler"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/example_bet"
        android:textSize="24sp"
        android:id="@+id/activity_blackjack_game_bet"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@color/light_gray"
        android:id="@+id/activity_blackjack_game_controls"
        />

</LinearLayout>